Proyecto3/Observabilidad/komposefiles/locust-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  labels:
    io.kompose.network/proyecto3_api_network: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
      role: worker
  template:
    metadata:
      labels:
        app: locust
        role: worker
    spec:
      containers:
        - name: locust
          image: ogcorzo/locust-custom:1.0.3
          command: ["locust"]
          args: ["-f", "/mnt/locust/locustfile.py", "--worker", "--master-host=locust-master"]
          volumeMounts:
            - name: locustfile-volume
              mountPath: /mnt/locust
      volumes:
        - name: locustfile-volume
          configMap:
            name: locustfile-configmap
            items:
              - key: locustfile.py
                path: locustfile.py
