Proyecto3/Observabilidad/komposefiles/proyecto3_obs_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: proyecto3-obs-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/proyecto3_obs_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/proyecto3_obs_network: "true"
